Set references & basic blocklist mapper

--- a/Backend/Umbraco9.Backoffice/appsettings.json
+++ b/Backend/Umbraco9.Backoffice/appsettings.json
@@ -28,5 +28,8 @@
         "Id": "35362cde-2452-4c1d-8843-790c201f0ad0"
       }
     }
+  },
+  "Application": {
+    "Version":  "1.0.0.1" 
   }
 }
