--- a/Backend/Umbraco9.Blazor/Umbraco9.Blazor.csproj
+++ b/Backend/Umbraco9.Blazor/Umbraco9.Blazor.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Umbraco9.Core\Umbraco9.Core.csproj" />
+  </ItemGroup>
+
 </Project>
